Fix layout issues, update styles, adjust fonts, and update README link for deployment

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,8 +1,10 @@
 .card__images {
+  margin-bottom: 12px;
   height: 413px;
   width: 100%;
   object-fit: cover;
   display: block;
+  border-radius: 8px;
 }
 
 .card__content {
@@ -11,13 +13,40 @@
   justify-content: space-between;
 }
 
+.card__title {
+  margin: 0;
+  font-family: "Poppins", "Arial", "Helvetica", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #212121;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 90%;
+}
+
 .card__like-btn {
-  background-image: url(../images/Like\ Icon.svg);
+  background-image: url(../images/like-icon.svg);
   width: 23px;
   height: 20px;
   border: none;
   background-color: transparent;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   opacity: 40%;
+  transition: opacity 0.3s;
+}
+
+.card__like-btn:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.card__like-button {
+  width: 20px;
+  height: 18px;
 }
 
 @media screen and (max-width: 627px) {
