--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,9 +1,11 @@
 .cards {
   padding-top: 20px;
+  border-bottom: 1px solid #21212166;
 }
 
 .cards__list {
   list-style-type: none;
+  font-family: "Poppins", "Arial", "Helvetica", sans-serif;
   padding: 0;
   margin: 0;
   display: grid;
