--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,52 +1,80 @@
 .profile {
   display: flex;
+  justify-content: center;
   padding: 34px 0 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 .profile__avatar {
-  height: 190px;
-  width: 190px;
   margin-right: 20px;
+  border-radius: 8px;
+  width: 190px;
+  height: 190px;
 }
 
 .profile__column {
   display: flex;
   flex-direction: column;
-  margin-right: 20px;
+  justify-content: space-between;
 }
 
 .profile__name {
   margin: 0 0 12px;
+  font-family: "Poppins", "Arial", "Helvetica", sans-serif;
   font-weight: 500;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  max-width: 420px;
+  font-size: 32px;
+  line-height: 1.2;
+  color: #212121;
 }
 
 .profile__description {
   margin: 0;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  max-width: 420px;
+  font-family: "Poppins", "Arial", "Helvetica", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #212121;
+  opacity: 0.8;
 }
 
 .profile__edit-btn {
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 500;
+  color: #212121;
+  padding: 0;
+  background-color: transparent;
+  border: none;
   margin-top: auto;
+  display: flex;
+  gap: 8px;
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.profile__edit-btn:hover {
+  opacity: 1;
 }
 
 .profile__add-btn {
   margin-left: auto;
-  font-weight: 500;
+  border-radius: 8px;
+  font-family: "Poppins", "Arial", "Helvetica", sans-serif;
   font-size: 16px;
-  line-height: 1.2;
   color: #fcf5e5;
+  background-color: #212121;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: end;
+  width: 157px;
+  height: 52px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.profile__add-btn:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
@@ -59,28 +87,25 @@
   }
 
   .profile__avatar {
-    margin-right: 0;
+    margin: 0 0 12px;
     height: 80px;
     width: 80px;
-    margin-bottom: 12px;
   }
-}
 
-.profile__name {
-  font-size: 20px;
-  margin: 0 0 6px;
-  max-width: 288px;
-}
+  .profile__name {
+    font-size: 20px;
+    margin: 0 0 6px;
+  }
 
-.profile__description {
-  margin: 0 0 32px;
-  max-width: 288px;
-}
+  .profile__description {
+    margin: 0 0 32px;
+  }
 
-.profile__column {
-  margin: 0 0 20px;
-}
+  .profile__column {
+    margin: 0 0 20px;
+  }
 
-.profile__add-btn {
-  margin: 0;
+  .profile__add-btn {
+    margin: 0;
+  }
 }
